<resources>
    <string name="app_name">ChoseIT</string>
    <string name="action_settings">Settings</string>
    <string name="TestText">TestText</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ChooseIT">ChooseIT</string>
    <string name="SelectOptions">Pasirinkite Sąlygas</string>
    <string name="Continue">Tęsti</string>
    <string name="selected_distance">Pasirinkta</string>
    <string name="select_max_distance">Pasirinkite maksimalų atstumą</string>
    <string name="select_price_interv">Pasirinkite kainos ribojimą</string>
    <string name="price_from">Kaina nuo</string>
    <string name="price_to">Kaina iki</string>
    <string name="random_button_text">Choose random restaurant</string>
    <string name="price">Price</string>
    <string name="mealTitle">Title</string>
    <string name="map">Map</string>
    <string name="meals_list">Patiekalu sarasas</string>
    <string name="restaurant_name">Restoranas</string>
    <string name="rate">Ivertinkinte</string>
    <string name="phone_number">Telefonas</string>
    <string name="adress">Adresas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
